--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -14,8 +14,9 @@
 
 <nav class="inner rop">
 <ul>
-<li><a href="#Intro">The Thing That Should Not Be...</a></li>
+<li><a href="#Intro">A Note from ArkhamDB</a></li>
 	<ul>
+	<li><a href="#The_Thing_That_Should_Not_Be">The Thing That Should Not Be...</a></li>
 	<li><a href="#The_Golden_Rules">The Golden Rules</a></li>
 	<li><a href="#The_Grim_Rule">The Grim Rule</a></li>
 	</ul>
@@ -83,6 +84,7 @@
 	<li><a href="#Direct_Damage_Direct_Horror">Direct Damage, Direct Horror</a></li>
 	<li><a href="#Discard_Piles">Discard Piles</a></li>
 	<li><a href="#Doom">Doom</a></li>
+	<li><a href="#Doubt_and_Conviction">Doubt and Conviction</a></li>
 	<li><a href="#Draw_Action">Draw Action</a></li>
 	<li><a href="#Drawing_Cards">Drawing Cards</a></li>
 	<li><a href="#Effects">Effects</a></li>
@@ -122,6 +124,7 @@
 	<li><a href="#Investigate_Action">Investigate Action</a></li>
 	<li><a href="#Investigation_Phase">Investigation Phase</a></li>
 	<li><a href="#Investigator_Deck">Investigator Deck</a></li>
+	<li><a href="#Joes_Hunch_Deck">Joe's "Hunch Deck"</a></li>
 	<li><a href="#Keywords">Keywords</a></li>
 	<li><a href="#Killed_Insane_Investigators">Killed/Insane Investigators</a></li>
 	<li><a href="#Lasting_Effects">Lasting Effects</a></li>
@@ -129,6 +132,7 @@
 	<li><a href="#Leaves_Play">Leaves Play</a></li>
 	<li><a href="#Limits_and_Maximums">Limits and Maximums</a></li>
 	<li><a href="#Location_Cards">Location Cards</a></li>
+	<li><a href="#Lola_and_Roles">Lola and "Roles"</a></li>
 	<li><a href="#Massive">Massive</a></li>
 	<li><a href="#May">May</a></li>
 	<li><a href="#Modifiers">Modifiers</a></li>
@@ -151,6 +155,7 @@
 	<li><a href="#Prey">Prey</a></li>
 	<li><a href="#Printed">Printed</a></li>
 	<li><a href="#Priority_of_Simultaneous_Resolution">Priority of Simultaneous Resolution</a></li>
+	<li><a href="#Prologue_Investigators">Prologue Investigators</a></li>
 	<li><a href="#Put_into_Play">Put into Play</a></li>
 	<li><a href="#Qualifiers">Qualifiers</a></li>
 	<li><a href="#Reaction_Opportunities">Reaction Opportunities</a></li>
@@ -174,6 +179,7 @@
 	<li><a href="#Slots">Slots</a></li>
 	<li><a href="#Spawn">Spawn</a></li>
 	<li><a href="#Standalone_Mode">Standalone Mode</a></li>
+	<li><a href="#Story_Cards">Story Cards</a></li>
 	<li><a href="#Supplies">Supplies</a></li>
 	<li><a href="#Surge">Surge</a></li>
 	<li><a href="#Swarming X">Swarming X</a></li>
@@ -191,7 +197,7 @@
 	<li><a href="#Unique">Unique</a></li>
 	<li><a href="#Upkeep_Phase">Upkeep Phase</a></li>
 	<li><a href="#Uses">Uses (X "type")</a></li>
-	<li><a href="#Vengeance_Points">Vengeance Points</a></li>
+	<li><a href="#Vengeance_X">Vengeance X</a></li>
 	<li><a href="#Victory_Display_Victory_Points">Victory Display, Victory Points</a></li>
 	<li><a href="#Weakness">Weakness</a></li>
 	<li><a href="#When">When</a></li>
@@ -226,7 +232,11 @@
 
 <div style="text-align: justify">
 
-<h1 id="Intro">The Thing That Should Not Be...</h1>
+<h2 id="Intro">A Note from ArkhamDB</h2>
+
+<p>This page contains a replica of the Rules Reference found in any copy of the Core Set of Arkham Horror: The Card Game. It also includes updates to the Rules Reference: rules added in deluxe expansions (marked in red) and rules added in the official FAQ for the game (marked in blue).</p>
+
+<h1 id="The_Thing_That_Should_Not_Be">The Thing That Should Not Be...</h1>
 
 <blockquote><em>The most merciful thing in the world, I think, is the inability of the human mind to correlate all its contents.</em><br>
 – <cite>H. P. Lovecraft, <em>"The Call of Cthulhu"</em></cite></blockquote>
@@ -455,7 +465,7 @@
 
 <h2 id="Alert" style="color:red">Alert (added in <em>The Forgotten Age</em>)</h2>
 
-<p>Each time an investigator fails a skill test while attempting to evade an enemy with the alert keyword, after applying all results for that skill test, that enemy performs an attack against the evading investigator. An enemy does not exhaust after performing an alert attack. This attack occurs whether the enemy is engaged with the evading investigator or not.</p>
+<p>Each time an investigator fails a skill test while attempting to evade an enemy with the "alert" keyword, after applying all results for that skill test, that enemy performs an attack against the evading investigator. An enemy does not exhaust after performing an alert attack. This attack occurs whether the enemy is engaged with the evading investigator or not.</p>
 
 <h2 id="Aloof">Aloof</h2>
 
@@ -561,7 +571,7 @@
 
 </ul>
 
-<h2 id="Bonded">Bonded</h2>
+<h2 id="Bonded" style="color:red">Bonded (added in <em>The Dream-Eaters</em>)</h2>
 
 <p>Cards with the bonded keyword are linked to another player card. They have no level and therefore are not available as deckbuilding options. Instead, the card to which they are bonded (which is listed in parentheses next to this keyword) brings the bonded card into the game.</p>
 
@@ -935,6 +945,12 @@
 
 <p>See also: "<a href="#Act_Deck_and_Agenda_Deck">Act Deck and Agenda Deck</a>" on page 3, "<a href="#Tokens">Tokens, Running out of</a>" on page 20.</p>
 
+<h2 id="Doubt_and_Conviction" style="color:red">Doubt and Conviction (added in <em>The Path to Carcosa</em>)</h2>
+
+<p>Some story resolutions and interludes in <i>The Path to Carcosa</i> campaign instruct the players to "Mark one <b>Doubt</b>" or "Mark one <b>Conviction</b>" in their Campaign Log. This is done by filling in one of the boxes next to "<b>Doubt</b>" or "<b>Conviction</b> at the bottom of the Campaign Log.</p>
+
+<p>Later in the campaign, some scenarios may be changed or altered depending on whether the investigators "have more <b>Doubt</b> than <b>Conviction</b>" or "have more <b>Conviction</b> than <b>Doubt</b>." The investigators have more <b>Doubt</b> than <b>Conviction</b> if the number of boxes filled in next to <b>Doubt</b> is greater than the number of boxes filled in next to <b>Conviction</b> (and vice versa). <b>Doubt</b> and <b>Conviction</b> are shared among all of the investigators, and they are not tied to any specific investigator. <b>Doubt</b> and <b>Conviction</b> have no game effect except when explicitly referenced by the Campaign Guide or by a card effect.</p>
+
 <h2 id="Draw_Action">Draw Action</h2>
 
 <p>"Draw" is an action an investigator may take during his or her turn in the investigation phase.</p>
@@ -1261,9 +1277,9 @@
 
 <h2 id="Haunted" style="color:red">Haunted (added in <em>The Circle Undone</em>)</h2>
 
-<p>Haunted is a new ability that appears on some locations. Each time an investigator fails a skill test while investigating a location, after applying all results for that skill test, that investigator must resolve all “<b>Haunted</b> –” abilities on that location.</p>
+<p>Haunted is a new ability that appears on some locations. Each time an investigator fails a skill test while investigating a location, after applying all results for that skill test, that investigator must resolve all "<b>Haunted</b> –" abilities on that location.</p>
 
-<p>A location is “haunted” for the purposes of other card effects if it has at least one “<b>Haunted</b> –” ability (printed or otherwise).</p>
+<p>A location is "haunted" for the purposes of other card effects if it has at least one "<b>Haunted</b> –" ability (printed or otherwise).</p>
 
 <h2 id="Health_and_Damage">Health and Damage</h2>
 
@@ -1289,9 +1305,21 @@
 
 <p>See also: "<a href="#Direct_Damage_Direct_Horror">Direct Damage, Direct Horror</a>" on page 9.</p>
 
-<h2 id="Hidden" style="color:red">Hidden (added in <em>The Path to Carcosa</em>)</h2>
+<h2 id="Hidden" style="color:red">Hidden (added in <em>The Path to Carcosa</em>, updated in <em>The Dream-Eaters</em>)</h2>
 
-<p>Some encounter cards in <em>The Path to Carcosa</em> campaign have the "hidden" keyword. Hidden cards have <b>Revelation</b> abilities that secretly add them to your hand. This should be done without revealing that card or its text to the other investigators. While a hidden card is in your hand, treat it as if it were in your threat area. Its Constant abilities are active, and abilities on it can be triggered, but only by you. A hidden card counts toward your hand size, but it cannot be discarded from your hand by <i>any</i> means except those described on the card. When discarded, hidden cards are placed in the encounter discard pile. They do not remain a part of your deck like weaknesses do. For the best experience, players are encouraged to stay "in character" and not share information about hidden cards in their hand.</p>
+<p>An encounter card or weakness with the hidden keyword has a revelation ability that secretly adds that card to your hand. This should be done without revealing that card or its text to the other investigators.</p>
+
+<ul>
+
+<li>  While a hidden treachery is in your hand, treat it as if it were in your threat area. Its constant abilities are active, and abilities on it can be triggered, but only by you.</li>
+
+<li>  While a hidden enemy is in your hand, it is not considered to be engaged with you or in your threat area, and it does not attack unless otherwise specified. However, its constant abilities are active, and abilities on it can be triggered, but only by you.</li>
+
+<li>  A hidden card counts toward your hand size, but it cannot be discarded from your hand by any means except those described on the card. When discarded, a hidden card is placed in its appropriate discard pile.</li>
+
+</ul>
+
+<p>For the best experience, players are encouraged to stay "in character" and not share information about hidden cards in their hand.</p>
 
 <h2 id="Hunter">Hunter</h2>
 
@@ -1301,7 +1329,7 @@
 
 <ul>
 
-<li>   If there are multiple equidistant investigators who qualify as "the nearest investigator," the enemy moves towards the one of those who best meets its prey instructions. If none do, or if the enemy has no prey instructions, the lead investigator may choose an investigator for the enemy to move towards.</li>
+<li>  If there are multiple equidistant investigators who qualify as "the nearest investigator," the enemy moves towards the one of those who best meets its prey instructions. If none do, or if the enemy has no prey instructions, the lead investigator may choose an investigator for the enemy to move towards.</li>
 
 <li>  If a hunter enemy would be compelled to a location to which the move is blocked by a card ability, the enemy does not move.</li>
 
@@ -1380,6 +1408,10 @@
 <h2 id="Investigator_Deck">Investigator Deck</h2>
 
 <p>A player's "investigator deck" is the deck that contains that player's asset, event, skill, and weakness cards. A reference to "your deck" refers to the investigator deck under your control.</p>
+
+<h2 id="Joes_Hunch_Deck" style="color:red">Joe's "Hunch Deck" (added in <em>The Circle Undone</em>)</h2>
+
+<p>As a private eye, Joe Diamond has learned to follow his instincts, and therefore he has a separate hunch deck, which is constructed during step 4 of the setup of each scenario. The cards in this hunch deck are chosen from Joe's 40-card deck and therefore count toward his total deck size. With the exception of these setup instructions, all references to Joe's "deck" refer to Joe's standard investigator deck and not his hunch deck. Joe's hunch deck has no discard pile; cards from your hunch deck are discarded to your standard discard pile when played.</p>
 
 <h2 id="Keywords">Keywords</h2>
 
@@ -1494,6 +1526,10 @@
 <li>  A location with its shroud/clue value side faceup is in the "revealed" state.</li>
 
 </ul>
+
+<h2 id="Lola_and_Roles" style="color:red">Lola and "Roles" (added in <em>The Path to Carcosa</em>)</h2>
+
+<p>As a renowned actress, Lola Hayes can play many different roles. At the beginning of each scenario, after investigators draw opening hands, Lola Hayes must choose a role (Neutral, Guardian, Seeker, Rogue, Mystic, or Survivor). Lola can only play cards, commit cards to skill tests, or trigger [action], [fast], or [reaction] abilities on Neutral cards or cards whose class matches her role. This restriction only applies to player cards, not to encounter cards or weaknesses. Note that Constant and <b>Forced</b> abilities remain active on cards whose class does not match Lola's role.</p>
 
 <h2 id="Massive">Massive</h2>
 
@@ -1730,6 +1766,10 @@
 <li>  If two or more constant abilities and/or lasting effects cannot be applied simultaneously, the lead investigator determines the order in which they are applied.</li>
 
 </ul>
+
+<h2 id="Prologue_Investigators" style="color:red">Prologue Investigators (added in <em>The Circle Undone</em>)</h2>
+
+<p>The four investigator cards depicted here (Gavriella Mizrah, Jerome Davids, Penny White, and Valentino Rivas) are marked with the <i>Disappearance at the Twilight Estate</i> encounter set icon and can only be used in the prologue for <i>The Circle Undone</i>. They cannot be used in other scenarios. Keep them with the rest of the scenario cards for <i>Disappearance at the Twilight Estate</i>, and do not integrate them into your collection of player cards.</p>
 
 <h2 id="Put_into_Play">Put into Play</h2>
 
@@ -2021,6 +2061,10 @@ A player cannot include 50 or more experience worth of cards in a standalone dec
 
 </ul>
 
+<h2 id="Story_Cards" style="color:red">Story Cards (added in <em>The Path to Carcosa</em>)</h2>
+
+<p>Story cards serve as an avenue for additional narrative and typically appear as the reverse side of another scenario card. When you are instructed to resolve a story card, simply read its story text and resolve its game text, if any.</p>
+
 <h2 id="Supplies" style="color:red">Supplies (added in <em>The Forgotten Age</em>)</h2>
 
 <p>At certain points throughout <em>The Forgotten Age</em> campaign, investigators are given the opportunity to choose supplies to bring on their expeditions into the wilds. These supplies are recorded in the Campaign Log, under each investigator's "Supplies" section.</p>
@@ -2221,7 +2265,7 @@ A player cannot include 50 or more experience worth of cards in a standalone dec
 
 </ul>
 
-<h2 id="Vengeance_Points" style="color:red">Vengeance Points (added in <em>The Forgotten Age</em>)</h2>
+<h2 id="Vengeance_X" style="color:red">Vengeance X (added in <em>The Forgotten Age</em>)</h2>
 
 <p>Some encounter cards are worth vengeance points. The text <strong>Vengeance X</strong> indicates that a card is worth X vengeance points.</p>
 
