--- a/src/AppBundle/Resources/views/Builder/initbuild-investigator.html.twig
+++ b/src/AppBundle/Resources/views/Builder/initbuild-investigator.html.twig
@@ -1,6 +1,7 @@
 {% import "AppBundle::macros.html.twig" as macros %}
-<div class="faint-{{investigator.faction.code|lower}} inv-class-{{investigator.faction.code|lower}} inv{% if investigator.owned %} owned{% endif %}">
-	<div style="flex: 1; display: flex;">
+<div data-combat="{{investigator.getSkillcombat()}}" data-intellect="{{investigator.getSkillintellect()}}" data-agility="{{investigator.getSkillagility()}}" data-willpower="{{investigator.getSkillwillpower()}}" data-class="{{investigator.faction.code|lower}}" data-name="{{investigator.name|lower}}" 
+	class="faint-{{investigator.faction.code|lower}} inv-class-{{investigator.faction.code|lower}} inv{% if investigator.owned %} owned{% endif %}">
+	<div style="flex: 1 1 auto; display: flex;">
 		<div style="padding-left : 0.2em; flex: 1;">
 			<h4 style="padding : 2px; margin: 0;"><img src="/bundles/cards/icons/{{investigator.faction.code|lower}}.png"> {{ macros.card_name_no_link(investigator) }}</h4>
 			<ul style="margin-left : 25px; padding-left: 0px;">
