--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -175,6 +175,7 @@
 	<li><a href="#Self_Referential_Text">Self-Referential Text</a></li>
 	<li><a href="#Signature_Cards">Signature Cards</a></li>
 	<li><a href="#Skill_Cards">Skill Cards</a></li>
+	<li><a href="#Skill_Test_Results_and_Advanced_Timing">Skill Test Results and Advanced Timing</a></li>
 	<li><a href="#Skill_Tests">Skill Tests</a></li>
 	<li><a href="#Slots">Slots</a></li>
 	<li><a href="#Spawn">Spawn</a></li>
@@ -351,6 +352,20 @@
 
 </ul>
 
+<p><span style="color:blue">(Added in FAQ, section 'Game Play', point 1.2)</span> An investigator is permitted to use triggered abilities ([fast], [reaction], and [action] abilities) from the following sources:</p>
+
+<ul>
+
+<li>  A card in play and under his or her control. This includes his or her investigator card.</li>
+
+<li>  A scenario card that is in play and at the same location as the investigator. This includes the location itself, encounter cards placed at that location, and all encounter cards in the threat area of any investigator at that location.</li>
+
+<li>  The current act or current agenda card.</li>
+
+<li>  Any card that explicitly allows the investigator to activate its ability.</li>
+
+</ul>
+
 <h3 id="Abilities_Keywords">Keywords</h3>
 
 <p>A keyword is a card ability which conveys specific rules to its card (see "<a href="#Keywords">Keywords</a>" on page 13).</p>
@@ -449,7 +464,7 @@
 
 <p>See also: "<a href="#Ability">Ability</a>" on page 2, "<a href="#Priority_of_Simultaneous_Resolution">Priority of Simultaneous Resolution</a>" on page 17.</p>
 
-<h2 id="Additional_Costs">Additional Costs</h2>
+<h2 id="Additional_Costs" style="color:blue">Additional Costs (added in FAQ, section 'Game Play', point 1.6)</h2>
 
 <p>Some cards add additional costs that must be paid in order to perform certain effects or actions, in the form of "As an additional cost to (specified effect/action) you must (additional cost)" or "You must (additional cost) to (specified effect/action)."</p>
 
@@ -537,7 +552,7 @@
 
 </ul>
 
-<p>Attacks of Opportunity are only triggered when 1 or more of an investigator’s actions are being spent or used to trigger an ability or action. [free] abilities with a bold action designator do not provoke attacks of opportunity.</p>
+<p><span style="color:blue">(Added in FAQ, section 'Game Play', point 1.1)</span> Attacks of Opportunity are only triggered when 1 or more of an investigator’s actions are being spent or used to trigger an ability or action. [free] abilities with a bold action designator do not provoke attacks of opportunity.</p>
 
 <h2 id="Automatic_Failure_Success">Automatic Failure/Success</h2>
 
@@ -602,6 +617,8 @@
 <li>  An investigator's deckbuilding guidelines (found on the back of the investigator card) must be observed while that investigator is purchasing new cards. Only cards the investigator has access to may be purchased. The deck-size requirement must also be maintained, so that for each (nonpermanent) card purchased and added to a deck, a different card is removed from the deck. Weakness cards and cards that must be included in an investigator's deck may not be removed while that investigator is purchasing new cards.</li>
 
 <li>  Each card costs experience equal to the card's level, <em>to a minimum of 1</em> (purchasing a level zero card still costs 1 experience). The number of pips beneath a card's cost indicates the card's level.</li>
+
+<li>  <span style="color:blue">(Added in FAQ, section 'Game Play', point 1.8)</span> When purchasing a new card during campaign play, an investigator must pay a minimum of 1 experience. As a result, level 0 cards cost 1 experience to purchase. This minimum only applies when purchasing new cards. It does not permanently alter a card’s level or experience cost, and does not apply when upgrading a card to a higher level version.</li>
 
 <li>  When purchasing a higher level version of a card with the same title, the investigator may choose to "upgrade" that card by paying only the difference in experience (to a minimum of 1) between the two cards and removing the lower level version of the card from his or her deck.</li>
 
@@ -691,7 +708,7 @@
 
 <p>See "<a href="#Skill_Test_Timing">ST.3 Reveal chaos token</a>" on page 26.</p>
 
-<h2 id="Choices_and_the_Grim_Rule">Choices, and the Grim Rule</h2>
+<h2 id="Choices_and_the_Grim_Rule "style="color:blue">Choices, and the Grim Rule (added in FAQ, section 'Game Play', point 1.5)</h2>
 
 <p>When investigators are forced to make a choice and there are multiple valid options, the lead investigator decides between those options. The Grim Rule does not play a part in these choices.</p>
 
@@ -1631,7 +1648,7 @@
 
 <p>Some card abilities reference the "nearest" entity. Nearest refers to the entity of the specified kind at a location that can be reached in the fewest number of connections, even if one or more of those connections are blocked by another card ability. The path to the nearest entity is the "shortest" path to that entity.</p>
 
-<h2 id="Nested_Sequences">Nested Sequences</h2>
+<h2 id="Nested_Sequences" style="color:blue">Nested Sequences (added in FAQ, section 'Game Play', point 1.4)</h2>
 
 <p>Each time a triggering condition occurs, the following sequence is followed: 1) execute “when...” effects that interrupt that triggering condition, (2) resolve the triggering condition, and then, (3) execute “after...” effects in response to that triggering condition.</p>
 
@@ -1789,7 +1806,7 @@
 
 <p>If card text includes a qualifier followed by multiple terms, the qualifier applies to each term in the list. <em>(For example, in the phrase "each unique ally and item," the word "unique" is a qualifier that applies both to "ally" and to "item.")</em></p>
 
-<h2 id="Reaction_Opportunities">Reaction Opportunities</h2>
+<h2 id="Reaction_Opportunities" style="color:blue">Reaction Opportunities (added in FAQ, section 'Game Play', point 1.3)</h2>
 
 <p>When a triggering condition resolves, investigators are granted the opportunity to resolve [reaction] abilities in response to that triggering condition. It is only after all investigators have passed their reaction opportunity that the game moves forward.</p>
 
@@ -1964,6 +1981,12 @@
 <p>If a skill card is committed to a skill test, its ability may be used during the resolution of that skill test, as specified on the card.</p>
 
 <p>See "<a href="#Skill_Test_Timing">Skill Test Timing</a>" on page 26.</p>
+
+<h2 id="Skill_Test_Results_and_Advanced_Timing" style="color:blue">Skill Test Results and Advanced Timing (added in FAQ, section 'Game Play', point 1.7)</h2>
+
+<p>During Step 7 of Skill Test Timing ("Apply skill test results"), all of the effects of the successful skill test are determined and resolved, one at a time. This includes the effects of the test itself (such as the clue discovered while investigating, or the damage dealt during an attack), as well as any "If this test is successful..." effects from card abilities or skill cards committed to the test.</p>
+
+<p>[reaction] or <b>Forced</b> abilities with a triggering condition dependent upon the skill test being successful or unsuccessful (such as "After you successfully investigate," or "After you fail a skill test by 2 or more") do not trigger at this time. These abilities are triggered during Step 6, "Determine success/failure of skill test."</p>
 
 <h2 id="Skill_Tests">Skill Tests</h2>
 
