--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -70,7 +70,7 @@
 	<li><a href="#Cardtypes">Cardtypes</a></li>
 	<li><a href="#Chaos_Tokens">Chaos Tokens</a></li>
 		<ul>
-		<li><a href="Resolving_Multiple_Revealed_Chaos_Tokens">Resolving Multiple Revealed Chaos Tokens</a></li>
+		<li><a href="#Resolving_Multiple_Revealed_Chaos_Tokens">Resolving Multiple Revealed Chaos Tokens</a></li>
 		</ul>
 	<li><a href="#Choices_and_the_Grim_Rule">Choices, and the Grim Rule</a></li>
 	<li><a href="#Clues">Clues</a></li>
@@ -741,7 +741,7 @@
 
 <p>If a new player joins the campaign, he or she must choose an investigator not previously used during this campaign. That player begins as if it were his or her first scenario in the campaign, with no experience and no trauma.</p>
 
-<h3 id="Transferring_Investigators_to_a_New_Campaign" style="color:blue">Transferring Investigators to a New Campaign (added in FAQ, section 'Game Play, point 1.11)</h3>
+<h3 id="Transferring_Investigators_to_a_New_Campaign" style="color:blue">Transferring Investigators to a New Campaign (added in FAQ, section 'Game Play', point 1.11)</h3>
 
 <p>This section expands on the ability for investigators to transfer from a completed campaign to another campaign, as originally described in the section "The End...or Is It?" in the Night of the Zealot campaign guide.</p>
 
@@ -1073,7 +1073,7 @@
 
 <li>  Any ability that would shuffle a discard pile of zero cards back into a deck does not shuffle the deck.</li>
 
-<li>  <span style="color:blue">(Added in FAQ, section 'Game Play, point 1.13)</span> A single card cannot be shuffled into an empty player deck or encounter deck via card effect. If this shuffling would occur during the playing or revelation of a card that is typically discarded after it is resolved, such as an event or treachery card, it is discarded. Otherwise, the card remains in its current game area.</li>
+<li>  <span style="color:blue">(Added in FAQ, section 'Game Play', point 1.13)</span> A single card cannot be shuffled into an empty player deck or encounter deck via card effect. If this shuffling would occur during the playing or revelation of a card that is typically discarded after it is resolved, such as an event or treachery card, it is discarded. Otherwise, the card remains in its current game area.</li>
 
 </ul>
 
@@ -2517,7 +2517,7 @@ A player cannot include 50 or more experience worth of cards in a standalone dec
 
 <li>  When an investigator draws a weakness with an encounter cardtype <em>(for example, an enemy or a treachery weakness)</em>, resolve that card as if it were just drawn from the encounter deck.</li>
 
-<li>  <span style="color:blue">(Added in FAQ, section 'Game Play, point 1.12)</span> Weaknesses with an encounter cardtype (such as enemies or treacheries) are considered to be player cards while they are in their bearer’s deck, and are considered to be encounter cards while they are being resolved, and once they have entered play. Before a weakness with an encounter cardtype is resolved, it is still considered to be a player card.</li>
+<li>  <span style="color:blue">(Added in FAQ, section 'Game Play', point 1.12)</span> Weaknesses with an encounter cardtype (such as enemies or treacheries) are considered to be player cards while they are in their bearer’s deck, and are considered to be encounter cards while they are being resolved, and once they have entered play. Before a weakness with an encounter cardtype is resolved, it is still considered to be a player card.</li>
 
 <li>  When an investigator draws a weakness with a player cardtype <em>(for example, an asset, an event, or a skill weakness)</em>, resolve any Revelation effects on the card, and add it to that investigator's hand. The card may then be used as any other player card of its type.</li>
 
