--- a/src/AppBundle/Resources/views/User/profile_edit.html.twig
+++ b/src/AppBundle/Resources/views/User/profile_edit.html.twig
@@ -58,7 +58,7 @@
   <div class="checkbox">
     <label>
         <input type="checkbox" name="share_decks" value="1" {% if user.isShareDecks %}checked{% endif %}>
-        {% trans %}Share your decks.{% endtrans %}
+        {% trans %}Make your decks public{% endtrans %}
     </label>
     <p class="help-block">If you check this box, the "View" page of your decks will be public instead of private. You can then send the link to your friends. If you uncheck the box, all your decks become private immediately.</p>
   </div>
